# Debug-Anymal

./: ReadMe
24_02_anymal_log/lpc/: anymal_lpc_2026-02-24-14-37-39_0.bag  anymal_lpc_2026-02-24-15-02-17_1.bag.active  anymal_lpc_2026-02-24-15-08-33_0.bag
24_02_anymal_log/npc/: anymal_npc_2026-02-24-15-08-33_0.bag
anymal_ctrl_oscillator/: CMakeLists.txt  package.xml
anymal_ctrl_oscillator/include/anymal_ctrl_oscillator/: JointVelocityLimit.hpp  KneeSymmetryCheck.hpp  OscillatorController.hpp
anymal_ctrl_oscillator/src/: OscillatorController.cpp
anymal_ctrl_oscillator/test/: TestAnymalCtrlOscillator.cpp
anymal_ctrl_oscillator_ros/: CMakeLists.txt  README.md  oscillator_controller.yaml  package.xml  robot_control_plugin.xml
anymal_ctrl_oscillator_ros/include/anymal_ctrl_oscillator_ros/: OscillatorControllerRos.hpp
anymal_ctrl_oscillator_ros/src/: OscillatorControllerRos.cpp  robot_control_plugin.cpp
anymal_ctrl_oscillator_ros/test/: TestAnymalCtrlOscillatorRos.cpp  ros_interface.test
